Fix infosystem edit view on IE11

--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -926,7 +926,7 @@ $CONTENTS
     word-break: break-word;
   }
 }
-.main-content .card-content {
+.main-content .col-lg-10 {
     flex: 0 0 auto;
 }
 h2,
